fixed horizontal scrolling issue

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,7 +11,7 @@
 }
 
 html {
-  @media (max-width: $sm) {
+  @media (max-width: $md) {
     font-size: 10px;
   }
 }
